--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -161,6 +161,7 @@ header .logo {
     width: 100px; 
     height: auto; 
     border-radius: 50%;
-    object-fit: cover;
+    object-fit:contain;
 }    
+
 
